# frags

./: .gitignore  Cargo.toml  Dockerfile  README.md
services/comment-service/: Cargo.toml
services/docs-service/: Cargo.toml
services/docs-service/src/: constants.rs  main.rs  routes.rs
services/docs-service/src/core/v1/: controllers.rs  models.rs
services/docs-service/src/core/v2/: controllers.rs  models.rs
services/gateway-service/: Cargo.toml
services/gateway-service/src/: main.rs
services/gateway-service/src/resources/: app.rs
services/order-service/: Cargo.toml
services/post-service/: Cargo.toml
services/post-wall-service/: Cargo.toml
services/recommender-service/: Cargo.toml
services/redoc-service/: Cargo.toml
services/review-service/: Cargo.toml
services/user-service/: Cargo.toml
services/user-service/src/: constants.rs  main.rs  routes.rs
services/user-service/src/core/v1/: controllers.rs  models.rs
src/: main.rs
